--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,9 +1,10 @@
 name: integration
 run-name: Pipeline de CI
 on:
-  push:
-    branches:
-      - dev
+  # push:
+  #   branches:
+  #     - dev
+  workflow_dispatch:
 jobs:
   build:
     name: Build and analyze
