--- a/.github/workflows/continuos-deployment.yaml
+++ b/.github/workflows/continuos-deployment.yaml
@@ -35,3 +35,29 @@ jobs:
                     app-name: domeneghetti-devops-ci
                     publish-profile: ${{ secrets.PUBLISH_PROFILE }}
                     image: domeneghetti/devops-ci:latest
+    
+    e2e-testing:
+        name: e2e-testing
+        runs-on: ubuntu-latest
+        needs: deploy
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+              with:
+                fetch-depth: 0
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v3.5.0
+              with:
+                node-version: '20'
+                cache: 'npm'
+            
+            - name: Install dependencies
+              run: |
+                cd integration-tests
+                npm install
+
+            - name: Run E2E tests
+              run: |
+                npx cypress run
