--- a/.github/workflows/continuos-deployment.yaml
+++ b/.github/workflows/continuos-deployment.yaml
@@ -4,7 +4,7 @@ on:
     pull_request:
         branches:
             - main
-    workflow_dispatch:
+  #  workflow_dispatch:
 jobs:
     deploy:
         name: deploy
@@ -47,6 +47,11 @@ jobs:
               with:
                 fetch-depth: 0
 
+            - name: Debug current directory
+              run: |
+                pwd
+                ls -la
+                
             - name: Set up Node.js
               uses: actions/setup-node@v3.9.1
               with:
