--- a/.github/workflows/continuos-deployment.yaml
+++ b/.github/workflows/continuos-deployment.yaml
@@ -1,39 +1,64 @@
-name: continuos-deployment
+name: continuous-deployment
 run-name: Deploy do App
 on:
-  pull_request:
-    branches:
-      - main
-  # workflow_dispatch:
+    pull_request:
+        branches:
+            - main
+    workflow_dispatch:
 jobs:
-  deploy:
-    name: deploy
-    runs-on: ubuntu-latest
+    deploy:
+        name: deploy
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-              
-      - name: Docker Login
-        uses: docker/login-action@v3.4.0
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        steps:
+                - uses: actions/checkout@v4
+                  with:
+                   fetch-depth: 0
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6.15.0
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: domeneghetti/devops-ci:latest
+                - name: Docker Login
+                  uses: docker/login-action@v3.4.0 
+                  with:
+                    username: ${{secrets.DOCKER_USER}}
+                    password: ${{secrets.DOCKER_PASSWORD}}
 
-      - name: Azure WebApp
-        uses: Azure/webapps-deploy@v3.0.1
-        with:
-          app-name: domeneghetti-devops-ci
-          publish-profile: ${{ secrets.PUBLISH_PROFILE }}
-          image: domeneghetti/devops-ci:latest
-  
-  
+                - name: Build and push Docker image
+                  uses: docker/build-push-action@v6.15.0
+                  with: 
+                    context: .
+                    file: ./Dockerfile
+                    push: true
+                    tags: kawaoliveira/devops-ci:latest
+
+                - name: Azure WebApp
+                  uses: Azure/webapps-deploy@v3.0.1
+                  with:
+                    app-name: kawaoliveira-devops-ci
+                    publish-profile: ${{secrets.PUBLISH_PROFILE }}
+                    image: kawaoliveira/devops-ci:latest
+      
+    e2e-testing:
+      name: e2e-testing
+      runs-on: ubuntu-latest
+      needs: deploy
+
+      steps: 
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+
+        - name: Setup Node.js
+          uses: actions/setp-node@v3.9.1
+          with:
+            node-version: '20'
+
+        - name: Install Packages
+          run: | 
+            cd integration-test
+            npm i
+
+        - name:  Run E2E Cypress
+          run: | 
+            cd integration-test
+            npx cypress run
+
+        
